[package]
name = "cquill"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Versioned CQL migrations for Cassandra and ScyllaDB"
keywords = ["cicd", "cql", "migration", "Cassandra", "ScyllaDB"]
authors = ["Adam McKee Bennett <adam.be.g84d@gmail.com>"]
homepage = "https://github.com/eighty4/cquill"
repository = "https://github.com/eighty4/cquill"
exclude = [".*", "Dockerfile", "docker-compose.yml"]
build = false

[profile.release]
lto = "fat"
opt-level = 3
strip = "symbols"

[lib]
name = "cquill"

[[bin]]
name = "cquill"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.1.15", features = ["derive"] }
lazy_static = "1.4.0"
md5 = "0.7.0"
regex = "1.9.1"
scylla = "0.8.2"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
uuid = "1.4.1"

[dev-dependencies]
rand = "0.8.5"
temp-dir = "0.1.11"
