[workspace]
members = ["cquill", "cquill_ast"]
resolver = "2"

[workspace.package]
authors = ["Adam McKee <adam.be.g84d@gmail.com>"]
edition = "2024"
license = "BSD-2-Clause"
repository = "https://github.com/eighty4/cquill"
homepage = "https://github.com/eighty4/cquill"

[workspace.dependencies]
anyhow = "1.0.81"
thiserror = "2.0.17"
uuid = "1.19.0"

[profile.release]
lto = "fat"
opt-level = 3
strip = "symbols"
