[package]
name = "cquill"
version = "0.0.9"
description = "Versioned CQL migrations for Cassandra and ScyllaDB"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
# exclude = [".*", "Dockerfile", "docker-compose.yml"]
# build = false

[lib]
name = "cquill"

[[bin]]
name = "cquill"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.53", features = ["derive"] }
lazy_static = "1.5.0"
md5 = "0.8.0"
regex = "1.12.2"
scylla = "1.4.1"
thiserror = { workspace = true }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { workspace = true }

[dev-dependencies]
rand = "0.9.2"
temp-dir = "0.1.16"
