[package]
name = "cquill_ast"
version = "0.0.1"
description = "AST parser & validator for Cassandra Query Language"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
